# roasting

./: .gitignore  CHANGELOG.md  LICENSE  README.ko.md  README.md  SKILL.md  index.html  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: release.yml  test.yml
assets/: prompts.js
db/migrations/: 0001_init_telemetry.sql
docs/ko/: case-catalog.md
docs/setup/: supabase.md
docs/superpowers/plans/: 2026-05-10-roasting-v01-implementation.md
docs/superpowers/specs/: 2026-05-10-roasting-design.md
scripts/: anti_patterns.py  build_slide_html.py  deliver.py  feedback.py  gen_case_catalog.py  install_hook.py  llm_judge.py  route.py  sync_cases.py  sync_slides.py  telemetry.py
skills/roasting/: SKILL.md
skills/roasting/agents/: roasting-black.md  roasting-blue.md
skills/roasting/references/: korean-polish.md  output-formats.md  workflow.md
skills/roasting/references/anti-patterns/: fake-image-url.md  hallucinated-number.md  internal-contradiction.md  slide-template-violation.md  unsourced-fact.md  vague-cta.md
skills/roasting/references/cases/: _index.md  c1.md  c10.md  c11.md  c12.md  c14.md  c15.md  c2.md  (+69 more)
tests/: test_build_slide_html.py  test_install_hook.py  test_skill_phase_0_2.py  test_skill_phase_3_4.py  test_skill_phase_5_subagent.py  test_skill_phase_5_teams.py  test_skill_phase_6_7.py  test_sync_cases.py  test_sync_slides.py  test_telemetry.py
tests/anti_patterns/: test_hallucinated_number.py
tests/quality/: run_scenario.py  scenarios.json
tests/routing/: cases_phrasings.json  cases_phrasings.seed.json  test_routing_accuracy.py
(+1 files in other folders)
