[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scripts*"]

[project]
name = "roasting"
version = "0.1.0"
description = "5-Color Harness execution engine — Claude Code plugin"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "supabase>=2.3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-requests",
    "types-PyYAML",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: integration tests that call Claude API",
    "network: tests that hit the live 5color/slide_library sites",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
